--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -9,10 +9,18 @@
   <body style="margin: 0; padding: 0;">
     <header style="background-color: #FF0000; height: 70px; width: 100%;">
     </header>
-    <footer style="background-color: #00FF00; height: 60px; width: 100%; position: absolute; bottom: 0; text-align: center;">
-      <div style="display: flex; justify-content: center; align-items: center; height: 100%;">
-	Best School
-      </div>
+    <footer style="background-color: #00FF00;
+		   height: 60px;
+		   width: 100%;
+		   position: absolute;
+		   display: flex;
+		   bottom: 0px;
+		   text-align: center;
+		   justify_content: center;
+		   align-items: center;
+		   place-content: center;
+	   ">
+      Best School
     </footer>
   </body>
 
